--- a/Python_Libraries.ipynb
+++ b/Python_Libraries.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "865fa4ed",
    "metadata": {
     "deletable": false,
@@ -114,12 +114,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-13\n",
+      "20:41:31\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing modules at the beginning of the program is a good practice\n",
+    "import datetime\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "date_today= datetime.date.today()\n",
+    "print (date_today)\n",
+    "\n",
+    "time_today= datetime.datetime.now()\n",
+    "print(time_today.strftime(\"%H:%M:%S\"))\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
@@ -148,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "c7edc1db",
    "metadata": {
     "deletable": false,
@@ -164,11 +178,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-13\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "from datetime import date\n",
+    "\n",
+    "date_today= date.today()\n",
+    "print (date_today)"
    ]
   },
   {
@@ -199,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "acdeb327",
    "metadata": {
     "deletable": false,
@@ -215,11 +240,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-13\n",
+      "20:41:31\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "import datetime as dt\n",
+    "\n",
+    "date_today = dt.date.today()\n",
+    "print (date_today)\n",
+    "\n",
+    "time_today = dt.datetime.now()\n",
+    "print (time_today.strftime(\"%H:%M:%S\"))"
    ]
   },
   {
@@ -269,7 +309,14 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "YOUR ANSWER HERE\n",
+    "csv - CSV FILE READING AND WRITING\n",
+    "datetime - BASIC DATE AND TIME TYPES\n",
+    "math - MATHEMATICAL FUNCTIONS\n",
+    "os - MISCELLANEOUS OPERATING SYSTEM INTERFACES\n",
+    "re - REGULAR EXPRESSION OPERATIONS\n",
+    "string - COMMON STRING OPERATIONS\n",
+    "unittest - UNIT TESTING FRAMEWORK"
    ]
   },
   {
@@ -313,13 +360,15 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "YOUR ANSWER HERE\n",
+    "\n",
+    "PyPI is a repository of software for the Python programming language."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -333,7 +382,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
